--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ development and industrial automation.
 </p>
 
 <p class="justify">To&nbsp;request our professional services please reach out&nbsp;to:</p>
-<p class="center"><i>shmergsons(at)gmail(dot)com</i></p>
+<p class="center"><object class="svg-email" data="assets/svg-email.svg" type="image/svg+xml"></object></p>
